<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black1"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/register_user_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/user"
            app:tint="@color/grey" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_name"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2"
        android:hint="@string/name"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/grey"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/register_email"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/grey"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/register_phone"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2"
        android:hint="@string/phone_no_optional"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/grey"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/green">

        <TextView
            style="@style/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black1"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>