<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black1"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context="Fragments.facility_profile">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2">

        <TextView
            style="@style/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2">

        <TextView
            android:id="@+id/profile_facility_user_btn"
            style="@style/main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/black2"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/facility"
            android:textColor="@color/black1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/black1"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/profile_facility_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/facility"
            app:tint="@color/grey" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_facility_picture_add"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/add_edit_facility_picture"
        android:textColor="@color/grey"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/profile_facility_name"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2"
        android:hint="@string/name"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/profile_facility_location"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2"
        android:hint="@string/location_unknown"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        android:clickable="false"
        android:focusable="false"
        tools:ignore="KeyboardInaccessibleWidget" />

    <EditText
        android:id="@+id/profile_facility_description"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black2"
        android:hint="@string/description"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/profile_facility_create_frame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/green">

        <TextView
            style="@style/main"
            android:id="@+id/profile_facility_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black1"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/profile_facility_cancel_btn"
        style="@style/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>