...
            android:contentDescription="@string/todo"
            android:padding="5dp"
            android:src="@drawable/create_event"
            app:tint="@color/grey" />

        <ImageView
            android:id="@+id/navbar_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/black2"
            android:contentDescription="@string/todo"
...
